--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "author": "Surjith S M",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "next": "14.2.3",
